✨ feat(dia01): implementa exercícios práticos TypeScript com validação e scripts NPM
🎯 Principais melhorias:
- ✅ Separa exercícios em arquivo próprio (exercicios.md) com 9 exercícios progressivos
- ✅ Valida e melhora exercícios para 100% de cobertura dos tópicos teóricos
- ✅ Adiciona exercícios novos: tipos primitivos, readonly properties, type guards
- ✅ Cria scripts NPM para execução fácil: npm run exemplos:dia01
- ✅ Configura tsconfig.json específico para execução local
- ✅ Adiciona type alias expandidos com exemplos práticos
- ✅ Remove namespace para evitar conflitos de tipos
- ✅ Atualiza documentação com instruções claras

📚 Estrutura didática:
- 🥉 Nível Iniciante: 3 exercícios fundamentais
- 🥈 Nível Intermediário: 2 exercícios com extensão e enums
- 🥇 Nível Avançado: 1 sistema completo de inventário
- 🧪 Exercícios Bônus: 3 desafios anti-any e type guards

🚀 Comandos disponíveis:
- npm run exemplos:dia01 (execução normal)
- npm run exemplos:dia01:watch (modo watch)

Arquivos criados/modificados:
- docs/semana-01/dia-01/exercicios.md (novo)
- docs/semana-01/dia-01/tsconfig.json (novo)
- docs/semana-01/dia-01/exemplos.ts (melhorado)
- docs/semana-01/dia-01/derrote-o-boss-any.md (referência exercícios)
- package.json (scripts adicionados)
- README.md (documentação atualizada)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@jornada-30-dias/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "exemplos:dia01": "cd docs/semana-01/dia-01 && npx ts-node exemplos.ts",
+    "exemplos:dia01:watch": "cd docs/semana-01/dia-01 && npx ts-node --watch exemplos.ts"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.0.0",
