refactor(docs): centralizar tsconfig.json na pasta docs
- Criar tsconfig.json único na pasta docs/ para todos os exercícios
- Remover arquivos tsconfig.json duplicados dos dias individuais
- Simplificar manutenção e garantir configuração consistente
- Manter funcionalidade: exemplos continuam executando corretamente
- Usar include '**/*.ts' para cobrir toda a árvore de documentação

Benefícios:
- DRY (Don't Repeat Yourself): uma configuração para toda pasta docs
- Facilita adição de novos dias sem duplicar configuração
- Consistência garantida entre todos os exercícios
- Menor overhead de manutenção

--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -18,9 +18,10 @@
     }
   },
   "include": [
-    "*.ts"
+    "**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
