📘 Dia 02: Comande seu Exército - Classes, Herança & Constructors
✨ Implementação completa do material didático sobre OOP:

🧱 Classes Fundamentais:
• Explicação conceitual com analogias (fábrica, RPG, Pokémon)
• Estrutura completa: propriedades, constructor, métodos
• Comparação procedural vs orientado a objetos
• Classes vs objetos vs funções - quando usar cada um

🔒 Convenções e Encapsulamento:
• Detalhamento da convenção underscore (_) para propriedades privadas
• Modificadores de acesso (private, protected, public)
• Getters e setters com validação
• Benefícios do encapsulamento com exemplos práticos

🏗️ Constructors Avançados:
• Ciclo de vida detalhado do constructor
• Comparação com/sem constructor
• Validação robusta na criação de objetos
• Dependency Injection com interfaces
• Builder Pattern para objetos complexos
• Factory Methods vs constructor direto

👥 Herança e Polimorfismo:
• Classes abstratas e implementação obrigatória
• Especialização de unidades (Arqueiro, Mago, Guerreiro)
• Sobrescrita de métodos (method overriding)
• Analogias com sistemas RTS

⚙️ Métodos Avançados:
• Parâmetros opcionais e valores padrão
• Rest parameters para múltiplos argumentos
• Sobrecarga de métodos (method overloading)
• Composição vs herança

💡 Boas Práticas:
• Princípios SOLID básicos
• Padrões de design (Builder, Factory, Dependency Injection)
• Dicas de performance e manutenibilidade
• Exemplos de código limpo e profissional

🎮 Analogias Didáticas:
• Sistema de Pokémon para demonstrar classes
• RPG para explicar constructors e atributos
• RTS para mostrar herança e polimorfismo
• Exemplos práticos e funcionais

📚 Material completo com:
• Mais de 1700 linhas de conteúdo teórico
• Códigos funcionais e testáveis
• Tabelas comparativas e resumos
• Exercícios práticos organizados por dificuldade

Ready for: Exercícios práticos e Dia 03 - Generics!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "exemplos:dia01": "cd docs/semana-01/dia-01 && npx ts-node exemplos.ts",
-    "exemplos:dia01:watch": "cd docs/semana-01/dia-01 && npx ts-node --watch exemplos.ts"
+    "exemplos:dia01:watch": "cd docs/semana-01/dia-01 && npx ts-node --watch exemplos.ts",
+    "exemplos:dia02": "cd docs/semana-01/dia-02 && npx ts-node exemplos.ts",
+    "exemplos:dia02:watch": "cd docs/semana-01/dia-02 && npx ts-node --watch exemplos.ts"
   },
   "private": true,
   "dependencies": {
