--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^20.0.7",
+    "@angular/cdk": "^20.1.3",
     "@angular/common": "~20.0.0",
     "@angular/compiler": "~20.0.0",
     "@angular/core": "~20.0.0",
     "@angular/forms": "~20.0.0",
+    "@angular/material": "^20.1.3",
     "@angular/platform-browser": "~20.0.0",
     "@angular/platform-browser-dynamic": "~20.0.0",
     "@angular/router": "~20.0.0",
@@ -21,6 +24,7 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~20.0.0",
     "@angular-devkit/core": "~20.0.0",
     "@angular-devkit/schematics": "~20.0.0",
     "@angular/cli": "~20.0.0",
@@ -32,6 +36,7 @@
     "@nx/eslint-plugin": "21.2.4",
     "@nx/jest": "21.2.4",
     "@nx/js": "21.2.4",
+    "@nx/web": "21.2.4",
     "@nx/workspace": "21.2.4",
     "@schematics/angular": "~20.0.0",
     "@swc-node/register": "~1.9.1",
