✨ feat: Implementar Dia 05 - Componentes, Data Binding & Módulos
🎯 Material Educacional Completo:
- README.md: Guia teórico extensivo sobre Angular (40+ seções)
- exemplos.ts: Exercícios práticos com TODOs para o aluno resolver
- exercicios.md: 10 exercícios progressivos + desafio extra

🏗️ Conteúdo Teórico Abrangente:
- Estrutura Angular completa (Módulos → Componentes → Services)
- Data Binding detalhado (Interpolação, Property, Event, Two-way)
- Input/Output com comunicação pai-filho avançada
- Pipes nativos e customizados com exemplos RPG
- Diretivas estruturais (*ngIf, *ngFor, ngSwitch) e de atributo
- Sistema de módulos e lazy loading

🔗 Data Binding Completo:
- Interpolação {{ }} com status de personagem
- Property Binding [prop] com imagens e estilos dinâmicos
- Event Binding (click) com sistema de combate
- Two-way Binding [(ngModel)] para edição de atributos
- Exemplos práticos com barras de vida, mana e experiência

🎨 Pipes e Transformações:
- Pipes nativos: number, date, currency, percent, case
- Pipes customizados: experiencia, raridade de itens
- Encadeamento de pipes para formatações complexas
- Exemplos com gold, experiência e datas de criação

🧩 Diretivas Avançadas:
- ngIf com condições e templates alternativos
- ngFor com trackBy, index e variáveis de contexto
- ngSwitch para interfaces diferentes por classe
- ngClass e ngStyle para estilos dinâmicos baseados em dados

📦 Sistema de Módulos:
- Estrutura organizacional completa
- Imports, exports e providers
- Lazy loading para performance
- Exemplo de PersonagemModule funcional

🎮 Projeto Prático RPG:
- Componente PersonagemComponent completo (TS + HTML + CSS)
- Sistema de combate com habilidades e mana
- Inventário com itens de diferentes raridades
- Sistema de experiência e level up
- Barras de status animadas e responsivas
- Mais de 300 linhas de código funcional

🎯 Características Pedagógicas:
- Tema RPG consistente (guildas, personagens, itens)
- Analogias claras (Componente = Personagem, Módul

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "exemplos:dia01": "cd docs/semana-01/dia-01 && npx ts-node exemplos.ts",
     "exemplos:dia02": "cd docs/semana-01/dia-02 && npx ts-node exemplos.ts",
     "exemplos:dia03": "cd docs/semana-01/dia-03 && npx ts-node exemplos.ts",
-    "exemplos:dia04": "cd docs/semana-01/dia-04 && npx ts-node exemplos.ts"
+    "exemplos:dia04": "cd docs/semana-01/dia-04 && npx ts-node exemplos.ts",
+    "exemplos:dia05": "cd docs/semana-01/dia-05 && npx ts-node exemplos.ts"
   },
   "private": true,
   "dependencies": {
