--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "exemplos:dia02": "cd docs/semana-01/dia-02 && npx ts-node exemplos.ts",
     "exemplos:dia03": "cd docs/semana-01/dia-03 && npx ts-node exemplos.ts",
     "exemplos:dia04": "cd docs/semana-01/dia-04 && npx ts-node exemplos.ts",
-    "exemplos:dia05": "cd docs/semana-01/dia-05 && npx ts-node exemplos.ts"
+    "exemplos:dia05": "cd docs/semana-01/dia-05 && npx ts-node exemplos.ts",
+    "exemplos:dia06": "cd docs/semana-02/dia-01 && npx ts-node exemplos.ts"
   },
   "private": true,
   "dependencies": {
